# Aether-GUI

./: .gitignore  README.md  README_fa.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASING.md  UPSTREAM.md
scripts/: require-tauri-signing.mjs  verify-bundled-cores.mjs  verify-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/binaries/: fetch-aether.ps1  fetch-aether.sh  fetch-singbox.ps1  fetch-singbox.sh
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  core_manager.rs  diagnostics.rs  error.rs  main.rs  state.rs  traffic.rs  tray.rs
src-tauri/src/aether/: mod.rs  orphan.rs  profiles.rs  pty.rs  status.rs  updater.rs
src-tauri/src/singbox/: config.rs  mod.rs  process.rs  status.rs
src/components/: AdvancedPanel.tsx  BindAddressField.tsx  ConnectButton.tsx  ConnectionModeToggle.tsx  ConnectionStatusLine.tsx  CoreManagerPanel.tsx  LiveLogViewer.tsx  NoizeProfileToggle.tsx  ScanModeToggle.tsx  SettingsPanel.tsx  SidecarErrorScreen.tsx  TitleBar.tsx  TunToggle.tsx
src/state/: connectionStore.ts  coreStore.ts  windowFocus.ts
src/types/: connection.ts  core.ts
